Update project for use in Igualada
- Format files
- Remove deprecated @Cucumber and cucumber.properties, in favor of Junit's suite API
- Merge application.yml